--- a/nail-art-resale/src/App.css
+++ b/nail-art-resale/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-image: url("https://images.unsplash.com/photo-1494919138911-02d403edd88d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
 }
 
 .App-logo {
