--- a/nail-art-resale/src/App.css
+++ b/nail-art-resale/src/App.css
@@ -1,6 +1,21 @@
+.title-div{
+  background-image: url("https://images.unsplash.com/photo-1494919138911-02d403edd88d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 94vh;
+  display: flex;
+  align-items: center;
+}
+
+.jumbo, .search{
+  background-color: rgba(231, 223, 223, 0.906);
+}
+
+
 .App {
   text-align: center;
-  background-image: url("https://images.unsplash.com/photo-1494919138911-02d403edd88d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
 }
 
 .App-logo {
